// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "hsl(0 100% 50% / 1)" 1`] = `
[
  "hsl(0 100% 50% / 1)",
  "hsl(30 100% 50% / 1)",
  "hsl(330 100% 50% / 1)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "hsl(0 100% 50% / 1)" 2`] = `
[
  "hsl(0 100% 50% / 1)",
  "hsl(180 100% 50% / 1)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "hsl(0 100% 50% / 1)" 3`] = `
[
  "hsl(0 100% 50% / 1)",
  "hsl(150 100% 50% / 1)",
  "hsl(210 100% 50% / 1)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "hsl(0 100% 50% / 1)" 4`] = `
[
  "hsl(0 100% 50% / 1)",
  "hsl(120 100% 50% / 1)",
  "hsl(240 100% 50% / 1)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "hsl(0 100% 50% / 1)" 5`] = `
[
  "hsl(0 100% 50% / 1)",
  "hsl(60 100% 50% / 1)",
  "hsl(240 100% 50% / 1)",
  "hsl(180 100% 50% / 1)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "hsl(0 100% 50% / 1)" 6`] = `
[
  "hsl(0 100% 50% / 1)",
  "hsl(90 100% 50% / 1)",
  "hsl(270 100% 50% / 1)",
  "hsl(180 100% 50% / 1)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "hsl(0 100% 50%)" 1`] = `
[
  "hsl(0 100% 50%)",
  "hsl(30 100% 50%)",
  "hsl(330 100% 50%)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "hsl(0 100% 50%)" 2`] = `
[
  "hsl(0 100% 50%)",
  "hsl(180 100% 50%)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "hsl(0 100% 50%)" 3`] = `
[
  "hsl(0 100% 50%)",
  "hsl(150 100% 50%)",
  "hsl(210 100% 50%)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "hsl(0 100% 50%)" 4`] = `
[
  "hsl(0 100% 50%)",
  "hsl(120 100% 50%)",
  "hsl(240 100% 50%)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "hsl(0 100% 50%)" 5`] = `
[
  "hsl(0 100% 50%)",
  "hsl(60 100% 50%)",
  "hsl(240 100% 50%)",
  "hsl(180 100% 50%)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "hsl(0 100% 50%)" 6`] = `
[
  "hsl(0 100% 50%)",
  "hsl(90 100% 50%)",
  "hsl(270 100% 50%)",
  "hsl(180 100% 50%)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "hwb(0 0% 0% / 1)" 1`] = `
[
  "hwb(0 0% 0% / 1)",
  "hwb(30 0% 0% / 1)",
  "hwb(330 0% 0% / 1)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "hwb(0 0% 0% / 1)" 2`] = `
[
  "hwb(0 0% 0% / 1)",
  "hwb(180 0% 0% / 1)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "hwb(0 0% 0% / 1)" 3`] = `
[
  "hwb(0 0% 0% / 1)",
  "hwb(150 0% 0% / 1)",
  "hwb(210 0% 0% / 1)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "hwb(0 0% 0% / 1)" 4`] = `
[
  "hwb(0 0% 0% / 1)",
  "hwb(120 0% 0% / 1)",
  "hwb(240 0% 0% / 1)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "hwb(0 0% 0% / 1)" 5`] = `
[
  "hwb(0 0% 0% / 1)",
  "hwb(60 0% 0% / 1)",
  "hwb(240 0% 0% / 1)",
  "hwb(180 0% 0% / 1)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "hwb(0 0% 0% / 1)" 6`] = `
[
  "hwb(0 0% 0% / 1)",
  "hwb(90 0% 0% / 1)",
  "hwb(270 0% 0% / 1)",
  "hwb(180 0% 0% / 1)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "hwb(0 0% 0%)" 1`] = `
[
  "hwb(0 0% 0%)",
  "hwb(30 0% 0%)",
  "hwb(330 0% 0%)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "hwb(0 0% 0%)" 2`] = `
[
  "hwb(0 0% 0%)",
  "hwb(180 0% 0%)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "hwb(0 0% 0%)" 3`] = `
[
  "hwb(0 0% 0%)",
  "hwb(150 0% 0%)",
  "hwb(210 0% 0%)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "hwb(0 0% 0%)" 4`] = `
[
  "hwb(0 0% 0%)",
  "hwb(120 0% 0%)",
  "hwb(240 0% 0%)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "hwb(0 0% 0%)" 5`] = `
[
  "hwb(0 0% 0%)",
  "hwb(60 0% 0%)",
  "hwb(240 0% 0%)",
  "hwb(180 0% 0%)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "hwb(0 0% 0%)" 6`] = `
[
  "hwb(0 0% 0%)",
  "hwb(90 0% 0%)",
  "hwb(270 0% 0%)",
  "hwb(180 0% 0%)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "rgb(255 0 0 / 1)" 1`] = `
[
  "rgb(255 0 0 / 1)",
  "rgb(255 127.5 0 / 1)",
  "rgb(255 0 127.5 / 1)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "rgb(255 0 0 / 1)" 2`] = `
[
  "rgb(255 0 0 / 1)",
  "rgb(0 255 255 / 1)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "rgb(255 0 0 / 1)" 3`] = `
[
  "rgb(255 0 0 / 1)",
  "rgb(0 255 127.5 / 1)",
  "rgb(0 127.5 255 / 1)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "rgb(255 0 0 / 1)" 4`] = `
[
  "rgb(255 0 0 / 1)",
  "rgb(0 255 0 / 1)",
  "rgb(0 0 255 / 1)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "rgb(255 0 0 / 1)" 5`] = `
[
  "rgb(255 0 0 / 1)",
  "rgb(255 255 0 / 1)",
  "rgb(0 0 255 / 1)",
  "rgb(0 255 255 / 1)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "rgb(255 0 0 / 1)" 6`] = `
[
  "rgb(255 0 0 / 1)",
  "rgb(127.5 255 0 / 1)",
  "rgb(127.5 0 255 / 1)",
  "rgb(0 255 255 / 1)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "rgb(255 0 0)" 1`] = `
[
  "rgb(255 0 0)",
  "rgb(255 127.5 0)",
  "rgb(255 0 127.5)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "rgb(255 0 0)" 2`] = `
[
  "rgb(255 0 0)",
  "rgb(0 255 255)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "rgb(255 0 0)" 3`] = `
[
  "rgb(255 0 0)",
  "rgb(0 255 127.5)",
  "rgb(0 127.5 255)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "rgb(255 0 0)" 4`] = `
[
  "rgb(255 0 0)",
  "rgb(0 255 0)",
  "rgb(0 0 255)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "rgb(255 0 0)" 5`] = `
[
  "rgb(255 0 0)",
  "rgb(255 255 0)",
  "rgb(0 0 255)",
  "rgb(0 255 255)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "rgb(255 0 0)" 6`] = `
[
  "rgb(255 0 0)",
  "rgb(127.5 255 0)",
  "rgb(127.5 0 255)",
  "rgb(0 255 255)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"H":0,"S":100,"L":50,"A":1} 1`] = `
[
  {
    "A": 1,
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 30,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 330,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"H":0,"S":100,"L":50,"A":1} 2`] = `
[
  {
    "A": 1,
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 180,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"H":0,"S":100,"L":50,"A":1} 3`] = `
[
  {
    "A": 1,
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 150,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 210,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"H":0,"S":100,"L":50,"A":1} 4`] = `
[
  {
    "A": 1,
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 120,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 240,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"H":0,"S":100,"L":50,"A":1} 5`] = `
[
  {
    "A": 1,
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 60,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 240,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 180,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"H":0,"S":100,"L":50,"A":1} 6`] = `
[
  {
    "A": 1,
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 90,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 270,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 180,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"H":0,"S":100,"L":50} 1`] = `
[
  {
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "H": 30,
    "L": 50,
    "S": 100,
  },
  {
    "H": 330,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"H":0,"S":100,"L":50} 2`] = `
[
  {
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "H": 180,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"H":0,"S":100,"L":50} 3`] = `
[
  {
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "H": 150,
    "L": 50,
    "S": 100,
  },
  {
    "H": 210,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"H":0,"S":100,"L":50} 4`] = `
[
  {
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "H": 120,
    "L": 50,
    "S": 100,
  },
  {
    "H": 240,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"H":0,"S":100,"L":50} 5`] = `
[
  {
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "H": 60,
    "L": 50,
    "S": 100,
  },
  {
    "H": 240,
    "L": 50,
    "S": 100,
  },
  {
    "H": 180,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"H":0,"S":100,"L":50} 6`] = `
[
  {
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "H": 90,
    "L": 50,
    "S": 100,
  },
  {
    "H": 270,
    "L": 50,
    "S": 100,
  },
  {
    "H": 180,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"H":0,"W":0,"B":0,"A":1} 1`] = `
[
  {
    "A": 1,
    "B": 0,
    "H": 0,
    "W": 0,
  },
  {
    "A": 1,
    "B": 0,
    "H": 30,
    "W": 0,
  },
  {
    "A": 1,
    "B": 0,
    "H": 330,
    "W": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"H":0,"W":0,"B":0,"A":1} 2`] = `
[
  {
    "A": 1,
    "B": 0,
    "H": 0,
    "W": 0,
  },
  {
    "A": 1,
    "B": 0,
    "H": 180,
    "W": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"H":0,"W":0,"B":0,"A":1} 3`] = `
[
  {
    "A": 1,
    "B": 0,
    "H": 0,
    "W": 0,
  },
  {
    "A": 1,
    "B": 0,
    "H": 150,
    "W": 0,
  },
  {
    "A": 1,
    "B": 0,
    "H": 210,
    "W": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"H":0,"W":0,"B":0,"A":1} 4`] = `
[
  {
    "A": 1,
    "B": 0,
    "H": 0,
    "W": 0,
  },
  {
    "A": 1,
    "B": 0,
    "H": 120,
    "W": 0,
  },
  {
    "A": 1,
    "B": 0,
    "H": 240,
    "W": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"H":0,"W":0,"B":0,"A":1} 5`] = `
[
  {
    "A": 1,
    "B": 0,
    "H": 0,
    "W": 0,
  },
  {
    "A": 1,
    "B": 0,
    "H": 60,
    "W": 0,
  },
  {
    "A": 1,
    "B": 0,
    "H": 240,
    "W": 0,
  },
  {
    "A": 1,
    "B": 0,
    "H": 180,
    "W": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"H":0,"W":0,"B":0,"A":1} 6`] = `
[
  {
    "A": 1,
    "B": 0,
    "H": 0,
    "W": 0,
  },
  {
    "A": 1,
    "B": 0,
    "H": 90,
    "W": 0,
  },
  {
    "A": 1,
    "B": 0,
    "H": 270,
    "W": 0,
  },
  {
    "A": 1,
    "B": 0,
    "H": 180,
    "W": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"H":0,"W":0,"B":0} 1`] = `
[
  {
    "B": 0,
    "H": 0,
    "W": 0,
  },
  {
    "B": 0,
    "H": 30,
    "W": 0,
  },
  {
    "B": 0,
    "H": 330,
    "W": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"H":0,"W":0,"B":0} 2`] = `
[
  {
    "B": 0,
    "H": 0,
    "W": 0,
  },
  {
    "B": 0,
    "H": 180,
    "W": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"H":0,"W":0,"B":0} 3`] = `
[
  {
    "B": 0,
    "H": 0,
    "W": 0,
  },
  {
    "B": 0,
    "H": 150,
    "W": 0,
  },
  {
    "B": 0,
    "H": 210,
    "W": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"H":0,"W":0,"B":0} 4`] = `
[
  {
    "B": 0,
    "H": 0,
    "W": 0,
  },
  {
    "B": 0,
    "H": 120,
    "W": 0,
  },
  {
    "B": 0,
    "H": 240,
    "W": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"H":0,"W":0,"B":0} 5`] = `
[
  {
    "B": 0,
    "H": 0,
    "W": 0,
  },
  {
    "B": 0,
    "H": 60,
    "W": 0,
  },
  {
    "B": 0,
    "H": 240,
    "W": 0,
  },
  {
    "B": 0,
    "H": 180,
    "W": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"H":0,"W":0,"B":0} 6`] = `
[
  {
    "B": 0,
    "H": 0,
    "W": 0,
  },
  {
    "B": 0,
    "H": 90,
    "W": 0,
  },
  {
    "B": 0,
    "H": 270,
    "W": 0,
  },
  {
    "B": 0,
    "H": 180,
    "W": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"R":255,"G":0,"B":0,"A":1} 1`] = `
[
  {
    "A": 1,
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "A": 1,
    "B": 0,
    "G": 127.5,
    "R": 255,
  },
  {
    "A": 1,
    "B": 127.5,
    "G": 0,
    "R": 255,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"R":255,"G":0,"B":0,"A":1} 2`] = `
[
  {
    "A": 1,
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "A": 1,
    "B": 255,
    "G": 255,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"R":255,"G":0,"B":0,"A":1} 3`] = `
[
  {
    "A": 1,
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "A": 1,
    "B": 127.5,
    "G": 255,
    "R": 0,
  },
  {
    "A": 1,
    "B": 255,
    "G": 127.5,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"R":255,"G":0,"B":0,"A":1} 4`] = `
[
  {
    "A": 1,
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "A": 1,
    "B": 0,
    "G": 255,
    "R": 0,
  },
  {
    "A": 1,
    "B": 255,
    "G": 0,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"R":255,"G":0,"B":0,"A":1} 5`] = `
[
  {
    "A": 1,
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "A": 1,
    "B": 0,
    "G": 255,
    "R": 255,
  },
  {
    "A": 1,
    "B": 255,
    "G": 0,
    "R": 0,
  },
  {
    "A": 1,
    "B": 255,
    "G": 255,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"R":255,"G":0,"B":0,"A":1} 6`] = `
[
  {
    "A": 1,
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "A": 1,
    "B": 0,
    "G": 255,
    "R": 127.5,
  },
  {
    "A": 1,
    "B": 255,
    "G": 0,
    "R": 127.5,
  },
  {
    "A": 1,
    "B": 255,
    "G": 255,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"R":255,"G":0,"B":0} 1`] = `
[
  {
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "B": 0,
    "G": 127.5,
    "R": 255,
  },
  {
    "B": 127.5,
    "G": 0,
    "R": 255,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"R":255,"G":0,"B":0} 2`] = `
[
  {
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "B": 255,
    "G": 255,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"R":255,"G":0,"B":0} 3`] = `
[
  {
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "B": 127.5,
    "G": 255,
    "R": 0,
  },
  {
    "B": 255,
    "G": 127.5,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"R":255,"G":0,"B":0} 4`] = `
[
  {
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "B": 0,
    "G": 255,
    "R": 0,
  },
  {
    "B": 255,
    "G": 0,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"R":255,"G":0,"B":0} 5`] = `
[
  {
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "B": 0,
    "G": 255,
    "R": 255,
  },
  {
    "B": 255,
    "G": 0,
    "R": 0,
  },
  {
    "B": 255,
    "G": 255,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"R":255,"G":0,"B":0} 6`] = `
[
  {
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "B": 0,
    "G": 255,
    "R": 127.5,
  },
  {
    "B": 255,
    "G": 0,
    "R": 127.5,
  },
  {
    "B": 255,
    "G": 255,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests L*a*b color as input 1`] = `
[
  "lab(30 68 -112)",
  "lab(68 46 75)",
]
`;

exports[`ColorTranslator harmony tests L*a*b color as input 2`] = `
[
  "lab(30 68 -112 / 1)",
  "lab(68 46 75 / 1)",
]
`;

exports[`ColorTranslator harmony tests L*a*b color as input 3`] = `
[
  {
    "L": 30,
    "a": 68,
    "b": -112,
  },
  {
    "L": 68,
    "a": 46,
    "b": 75,
  },
]
`;

exports[`ColorTranslator harmony tests L*a*b color as input 4`] = `
[
  {
    "A": 1,
    "L": 30,
    "a": 68,
    "b": -112,
  },
  {
    "A": 1,
    "L": 68,
    "a": 46,
    "b": 75,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "hsl(0 100% 50% / 1)" 1`] = `
[
  "hsl(0 100% 50% / 1)",
  "hsl(180 100% 50% / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "hsl(0 100% 50% / 1)" 2`] = `
[
  "hsl(0 100% 50% / 1)",
  "hsl(180 100% 50% / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "hsl(0 100% 50% / 1)" 3`] = `
[
  "hsl(0 100% 50% / 1)",
  "hsl(180 100% 50% / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "hsl(0 100% 50% / 1)" 4`] = `
[
  "hsl(0 100% 50% / 1)",
  "hsl(180 100% 50% / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "hsl(0 100% 50% / 1)" 5`] = `
[
  "hsl(0 100% 50% / 1)",
  "hsl(180 100% 50% / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "hsl(0 100% 50% / 1)" 6`] = `
[
  "hsl(0 100% 50% / 1)",
  "hsl(180 100% 50% / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "hsl(0 100% 50%)" 1`] = `
[
  "hsl(0 100% 50%)",
  "hsl(180 100% 50%)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "hsl(0 100% 50%)" 2`] = `
[
  "hsl(0 100% 50%)",
  "hsl(180 100% 50%)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "hsl(0 100% 50%)" 3`] = `
[
  "hsl(0 100% 50%)",
  "hsl(180 100% 50%)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "hsl(0 100% 50%)" 4`] = `
[
  "hsl(0 100% 50%)",
  "hsl(180 100% 50%)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "hsl(0 100% 50%)" 5`] = `
[
  "hsl(0 100% 50%)",
  "hsl(180 100% 50%)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "hsl(0 100% 50%)" 6`] = `
[
  "hsl(0 100% 50%)",
  "hsl(180 100% 50%)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "hwb(0 0% 0% / 1)" 1`] = `
[
  "hwb(0 0% 0% / 1)",
  "hwb(180 0% 0% / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "hwb(0 0% 0% / 1)" 2`] = `
[
  "hwb(0 0% 0% / 1)",
  "hwb(180 0% 0% / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "hwb(0 0% 0% / 1)" 3`] = `
[
  "hwb(0 0% 0% / 1)",
  "hwb(180 0% 0% / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "hwb(0 0% 0% / 1)" 4`] = `
[
  "hwb(0 0% 0% / 1)",
  "hwb(180 0% 0% / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "hwb(0 0% 0% / 1)" 5`] = `
[
  "hwb(0 0% 0% / 1)",
  "hwb(180 0% 0% / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "hwb(0 0% 0% / 1)" 6`] = `
[
  "hwb(0 0% 0% / 1)",
  "hwb(180 0% 0% / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "hwb(0 0% 0%)" 1`] = `
[
  "hwb(0 0% 0%)",
  "hwb(180 0% 0%)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "hwb(0 0% 0%)" 2`] = `
[
  "hwb(0 0% 0%)",
  "hwb(180 0% 0%)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "hwb(0 0% 0%)" 3`] = `
[
  "hwb(0 0% 0%)",
  "hwb(180 0% 0%)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "hwb(0 0% 0%)" 4`] = `
[
  "hwb(0 0% 0%)",
  "hwb(180 0% 0%)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "hwb(0 0% 0%)" 5`] = `
[
  "hwb(0 0% 0%)",
  "hwb(180 0% 0%)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "hwb(0 0% 0%)" 6`] = `
[
  "hwb(0 0% 0%)",
  "hwb(180 0% 0%)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "rgb(255 0 0 / 1)" 1`] = `
[
  "rgb(255 0 0 / 1)",
  "rgb(0 255 255 / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "rgb(255 0 0 / 1)" 2`] = `
[
  "rgb(255 0 0 / 1)",
  "rgb(0 255 255 / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "rgb(255 0 0 / 1)" 3`] = `
[
  "rgb(255 0 0 / 1)",
  "rgb(0 255 255 / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "rgb(255 0 0 / 1)" 4`] = `
[
  "rgb(255 0 0 / 1)",
  "rgb(0 255 255 / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "rgb(255 0 0 / 1)" 5`] = `
[
  "rgb(255 0 0 / 1)",
  "rgb(0 255 255 / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "rgb(255 0 0 / 1)" 6`] = `
[
  "rgb(255 0 0 / 1)",
  "rgb(0 255 255 / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "rgb(255 0 0)" 1`] = `
[
  "rgb(255 0 0)",
  "rgb(0 255 255)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "rgb(255 0 0)" 2`] = `
[
  "rgb(255 0 0)",
  "rgb(0 255 255)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "rgb(255 0 0)" 3`] = `
[
  "rgb(255 0 0)",
  "rgb(0 255 255)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "rgb(255 0 0)" 4`] = `
[
  "rgb(255 0 0)",
  "rgb(0 255 255)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "rgb(255 0 0)" 5`] = `
[
  "rgb(255 0 0)",
  "rgb(0 255 255)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "rgb(255 0 0)" 6`] = `
[
  "rgb(255 0 0)",
  "rgb(0 255 255)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"H":0,"S":100,"L":50,"A":1} 1`] = `
[
  {
    "A": 1,
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 180,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"H":0,"S":100,"L":50,"A":1} 2`] = `
[
  {
    "A": 1,
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 180,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"H":0,"S":100,"L":50,"A":1} 3`] = `
[
  {
    "A": 1,
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 180,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"H":0,"S":100,"L":50,"A":1} 4`] = `
[
  {
    "A": 1,
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 180,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"H":0,"S":100,"L":50,"A":1} 5`] = `
[
  {
    "A": 1,
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 180,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"H":0,"S":100,"L":50,"A":1} 6`] = `
[
  {
    "A": 1,
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 180,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"H":0,"S":100,"L":50} 1`] = `
[
  {
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "H": 180,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"H":0,"S":100,"L":50} 2`] = `
[
  {
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "H": 180,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"H":0,"S":100,"L":50} 3`] = `
[
  {
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "H": 180,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"H":0,"S":100,"L":50} 4`] = `
[
  {
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "H": 180,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"H":0,"S":100,"L":50} 5`] = `
[
  {
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "H": 180,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"H":0,"S":100,"L":50} 6`] = `
[
  {
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "H": 180,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"H":0,"W":0,"B":0,"A":1} 1`] = `
[
  {
    "A": 1,
    "B": 0,
    "H": 0,
    "W": 0,
  },
  {
    "A": 1,
    "B": 0,
    "H": 180,
    "W": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"H":0,"W":0,"B":0,"A":1} 2`] = `
[
  {
    "A": 1,
    "B": 0,
    "H": 0,
    "W": 0,
  },
  {
    "A": 1,
    "B": 0,
    "H": 180,
    "W": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"H":0,"W":0,"B":0,"A":1} 3`] = `
[
  {
    "A": 1,
    "B": 0,
    "H": 0,
    "W": 0,
  },
  {
    "A": 1,
    "B": 0,
    "H": 180,
    "W": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"H":0,"W":0,"B":0,"A":1} 4`] = `
[
  {
    "A": 1,
    "B": 0,
    "H": 0,
    "W": 0,
  },
  {
    "A": 1,
    "B": 0,
    "H": 180,
    "W": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"H":0,"W":0,"B":0,"A":1} 5`] = `
[
  {
    "A": 1,
    "B": 0,
    "H": 0,
    "W": 0,
  },
  {
    "A": 1,
    "B": 0,
    "H": 180,
    "W": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"H":0,"W":0,"B":0,"A":1} 6`] = `
[
  {
    "A": 1,
    "B": 0,
    "H": 0,
    "W": 0,
  },
  {
    "A": 1,
    "B": 0,
    "H": 180,
    "W": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"H":0,"W":0,"B":0} 1`] = `
[
  {
    "B": 0,
    "H": 0,
    "W": 0,
  },
  {
    "B": 0,
    "H": 180,
    "W": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"H":0,"W":0,"B":0} 2`] = `
[
  {
    "B": 0,
    "H": 0,
    "W": 0,
  },
  {
    "B": 0,
    "H": 180,
    "W": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"H":0,"W":0,"B":0} 3`] = `
[
  {
    "B": 0,
    "H": 0,
    "W": 0,
  },
  {
    "B": 0,
    "H": 180,
    "W": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"H":0,"W":0,"B":0} 4`] = `
[
  {
    "B": 0,
    "H": 0,
    "W": 0,
  },
  {
    "B": 0,
    "H": 180,
    "W": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"H":0,"W":0,"B":0} 5`] = `
[
  {
    "B": 0,
    "H": 0,
    "W": 0,
  },
  {
    "B": 0,
    "H": 180,
    "W": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"H":0,"W":0,"B":0} 6`] = `
[
  {
    "B": 0,
    "H": 0,
    "W": 0,
  },
  {
    "B": 0,
    "H": 180,
    "W": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"R":255,"G":0,"B":0,"A":1} 1`] = `
[
  {
    "A": 1,
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "A": 1,
    "B": 255,
    "G": 255,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"R":255,"G":0,"B":0,"A":1} 2`] = `
[
  {
    "A": 1,
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "A": 1,
    "B": 255,
    "G": 255,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"R":255,"G":0,"B":0,"A":1} 3`] = `
[
  {
    "A": 1,
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "A": 1,
    "B": 255,
    "G": 255,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"R":255,"G":0,"B":0,"A":1} 4`] = `
[
  {
    "A": 1,
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "A": 1,
    "B": 255,
    "G": 255,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"R":255,"G":0,"B":0,"A":1} 5`] = `
[
  {
    "A": 1,
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "A": 1,
    "B": 255,
    "G": 255,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"R":255,"G":0,"B":0,"A":1} 6`] = `
[
  {
    "A": 1,
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "A": 1,
    "B": 255,
    "G": 255,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"R":255,"G":0,"B":0} 1`] = `
[
  {
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "B": 255,
    "G": 255,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"R":255,"G":0,"B":0} 2`] = `
[
  {
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "B": 255,
    "G": 255,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"R":255,"G":0,"B":0} 3`] = `
[
  {
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "B": 255,
    "G": 255,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"R":255,"G":0,"B":0} 4`] = `
[
  {
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "B": 255,
    "G": 255,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"R":255,"G":0,"B":0} 5`] = `
[
  {
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "B": 255,
    "G": 255,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"R":255,"G":0,"B":0} 6`] = `
[
  {
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "B": 255,
    "G": 255,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "hsl(0 100% 50% / 1)" 1`] = `
[
  "hsl(0 100% 50% / 1)",
  "hsl(15 100% 50% / 1)",
  "hsl(330 100% 50% / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "hsl(0 100% 50% / 1)" 2`] = `
[
  "hsl(0 100% 50% / 1)",
  "hsl(120 100% 50% / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "hsl(0 100% 50% / 1)" 3`] = `
[
  "hsl(0 100% 50% / 1)",
  "hsl(90 100% 50% / 1)",
  "hsl(180 100% 50% / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "hsl(0 100% 50% / 1)" 4`] = `
[
  "hsl(0 100% 50% / 1)",
  "hsl(60 100% 50% / 1)",
  "hsl(240 100% 50% / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "hsl(0 100% 50% / 1)" 5`] = `
[
  "hsl(0 100% 50% / 1)",
  "hsl(30 100% 50% / 1)",
  "hsl(240 100% 50% / 1)",
  "hsl(120 100% 50% / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "hsl(0 100% 50% / 1)" 6`] = `
[
  "hsl(0 100% 50% / 1)",
  "hsl(45 100% 50% / 1)",
  "hsl(270 100% 50% / 1)",
  "hsl(120 100% 50% / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "hsl(0 100% 50%)" 1`] = `
[
  "hsl(0 100% 50%)",
  "hsl(15 100% 50%)",
  "hsl(330 100% 50%)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "hsl(0 100% 50%)" 2`] = `
[
  "hsl(0 100% 50%)",
  "hsl(120 100% 50%)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "hsl(0 100% 50%)" 3`] = `
[
  "hsl(0 100% 50%)",
  "hsl(90 100% 50%)",
  "hsl(180 100% 50%)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "hsl(0 100% 50%)" 4`] = `
[
  "hsl(0 100% 50%)",
  "hsl(60 100% 50%)",
  "hsl(240 100% 50%)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "hsl(0 100% 50%)" 5`] = `
[
  "hsl(0 100% 50%)",
  "hsl(30 100% 50%)",
  "hsl(240 100% 50%)",
  "hsl(120 100% 50%)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "hsl(0 100% 50%)" 6`] = `
[
  "hsl(0 100% 50%)",
  "hsl(45 100% 50%)",
  "hsl(270 100% 50%)",
  "hsl(120 100% 50%)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "hwb(0 0% 0% / 1)" 1`] = `
[
  "hwb(0 0% 0% / 1)",
  "hwb(15 0% 0% / 1)",
  "hwb(330 0% 0% / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "hwb(0 0% 0% / 1)" 2`] = `
[
  "hwb(0 0% 0% / 1)",
  "hwb(120 0% 0% / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "hwb(0 0% 0% / 1)" 3`] = `
[
  "hwb(0 0% 0% / 1)",
  "hwb(90 0% 0% / 1)",
  "hwb(180 0% 0% / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "hwb(0 0% 0% / 1)" 4`] = `
[
  "hwb(0 0% 0% / 1)",
  "hwb(60 0% 0% / 1)",
  "hwb(240 0% 0% / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "hwb(0 0% 0% / 1)" 5`] = `
[
  "hwb(0 0% 0% / 1)",
  "hwb(30 0% 0% / 1)",
  "hwb(240 0% 0% / 1)",
  "hwb(120 0% 0% / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "hwb(0 0% 0% / 1)" 6`] = `
[
  "hwb(0 0% 0% / 1)",
  "hwb(45 0% 0% / 1)",
  "hwb(270 0% 0% / 1)",
  "hwb(120 0% 0% / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "hwb(0 0% 0%)" 1`] = `
[
  "hwb(0 0% 0%)",
  "hwb(15 0% 0%)",
  "hwb(330 0% 0%)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "hwb(0 0% 0%)" 2`] = `
[
  "hwb(0 0% 0%)",
  "hwb(120 0% 0%)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "hwb(0 0% 0%)" 3`] = `
[
  "hwb(0 0% 0%)",
  "hwb(90 0% 0%)",
  "hwb(180 0% 0%)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "hwb(0 0% 0%)" 4`] = `
[
  "hwb(0 0% 0%)",
  "hwb(60 0% 0%)",
  "hwb(240 0% 0%)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "hwb(0 0% 0%)" 5`] = `
[
  "hwb(0 0% 0%)",
  "hwb(30 0% 0%)",
  "hwb(240 0% 0%)",
  "hwb(120 0% 0%)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "hwb(0 0% 0%)" 6`] = `
[
  "hwb(0 0% 0%)",
  "hwb(45 0% 0%)",
  "hwb(270 0% 0%)",
  "hwb(120 0% 0%)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "rgb(255 0 0 / 1)" 1`] = `
[
  "rgb(255 0 0 / 1)",
  "rgb(255 63.75 0 / 1)",
  "rgb(255 0 127.5 / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "rgb(255 0 0 / 1)" 2`] = `
[
  "rgb(255 0 0 / 1)",
  "rgb(0 255 0 / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "rgb(255 0 0 / 1)" 3`] = `
[
  "rgb(255 0 0 / 1)",
  "rgb(127.5 255 0 / 1)",
  "rgb(0 255 255 / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "rgb(255 0 0 / 1)" 4`] = `
[
  "rgb(255 0 0 / 1)",
  "rgb(255 255 0 / 1)",
  "rgb(0 0 255 / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "rgb(255 0 0 / 1)" 5`] = `
[
  "rgb(255 0 0 / 1)",
  "rgb(255 127.5 0 / 1)",
  "rgb(0 0 255 / 1)",
  "rgb(0 255 0 / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "rgb(255 0 0 / 1)" 6`] = `
[
  "rgb(255 0 0 / 1)",
  "rgb(255 191.25 0 / 1)",
  "rgb(127.5 0 255 / 1)",
  "rgb(0 255 0 / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "rgb(255 0 0)" 1`] = `
[
  "rgb(255 0 0)",
  "rgb(255 63.75 0)",
  "rgb(255 0 127.5)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "rgb(255 0 0)" 2`] = `
[
  "rgb(255 0 0)",
  "rgb(0 255 0)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "rgb(255 0 0)" 3`] = `
[
  "rgb(255 0 0)",
  "rgb(127.5 255 0)",
  "rgb(0 255 255)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "rgb(255 0 0)" 4`] = `
[
  "rgb(255 0 0)",
  "rgb(255 255 0)",
  "rgb(0 0 255)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "rgb(255 0 0)" 5`] = `
[
  "rgb(255 0 0)",
  "rgb(255 127.5 0)",
  "rgb(0 0 255)",
  "rgb(0 255 0)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "rgb(255 0 0)" 6`] = `
[
  "rgb(255 0 0)",
  "rgb(255 191.25 0)",
  "rgb(127.5 0 255)",
  "rgb(0 255 0)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"H":0,"S":100,"L":50,"A":1} 1`] = `
[
  {
    "A": 1,
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 15,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 330,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"H":0,"S":100,"L":50,"A":1} 2`] = `
[
  {
    "A": 1,
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 120,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"H":0,"S":100,"L":50,"A":1} 3`] = `
[
  {
    "A": 1,
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 90,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 180,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"H":0,"S":100,"L":50,"A":1} 4`] = `
[
  {
    "A": 1,
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 60,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 240,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"H":0,"S":100,"L":50,"A":1} 5`] = `
[
  {
    "A": 1,
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 30,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 240,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 120,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"H":0,"S":100,"L":50,"A":1} 6`] = `
[
  {
    "A": 1,
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 45,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 270,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 120,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"H":0,"S":100,"L":50} 1`] = `
[
  {
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "H": 15,
    "L": 50,
    "S": 100,
  },
  {
    "H": 330,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"H":0,"S":100,"L":50} 2`] = `
[
  {
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "H": 120,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"H":0,"S":100,"L":50} 3`] = `
[
  {
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "H": 90,
    "L": 50,
    "S": 100,
  },
  {
    "H": 180,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"H":0,"S":100,"L":50} 4`] = `
[
  {
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "H": 60,
    "L": 50,
    "S": 100,
  },
  {
    "H": 240,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"H":0,"S":100,"L":50} 5`] = `
[
  {
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "H": 30,
    "L": 50,
    "S": 100,
  },
  {
    "H": 240,
    "L": 50,
    "S": 100,
  },
  {
    "H": 120,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"H":0,"S":100,"L":50} 6`] = `
[
  {
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "H": 45,
    "L": 50,
    "S": 100,
  },
  {
    "H": 270,
    "L": 50,
    "S": 100,
  },
  {
    "H": 120,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"H":0,"W":0,"B":0,"A":1} 1`] = `
[
  {
    "A": 1,
    "B": 0,
    "H": 0,
    "W": 0,
  },
  {
    "A": 1,
    "B": 0,
    "H": 15,
    "W": 0,
  },
  {
    "A": 1,
    "B": 0,
    "H": 330,
    "W": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"H":0,"W":0,"B":0,"A":1} 2`] = `
[
  {
    "A": 1,
    "B": 0,
    "H": 0,
    "W": 0,
  },
  {
    "A": 1,
    "B": 0,
    "H": 120,
    "W": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"H":0,"W":0,"B":0,"A":1} 3`] = `
[
  {
    "A": 1,
    "B": 0,
    "H": 0,
    "W": 0,
  },
  {
    "A": 1,
    "B": 0,
    "H": 90,
    "W": 0,
  },
  {
    "A": 1,
    "B": 0,
    "H": 180,
    "W": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"H":0,"W":0,"B":0,"A":1} 4`] = `
[
  {
    "A": 1,
    "B": 0,
    "H": 0,
    "W": 0,
  },
  {
    "A": 1,
    "B": 0,
    "H": 60,
    "W": 0,
  },
  {
    "A": 1,
    "B": 0,
    "H": 240,
    "W": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"H":0,"W":0,"B":0,"A":1} 5`] = `
[
  {
    "A": 1,
    "B": 0,
    "H": 0,
    "W": 0,
  },
  {
    "A": 1,
    "B": 0,
    "H": 30,
    "W": 0,
  },
  {
    "A": 1,
    "B": 0,
    "H": 240,
    "W": 0,
  },
  {
    "A": 1,
    "B": 0,
    "H": 120,
    "W": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"H":0,"W":0,"B":0,"A":1} 6`] = `
[
  {
    "A": 1,
    "B": 0,
    "H": 0,
    "W": 0,
  },
  {
    "A": 1,
    "B": 0,
    "H": 45,
    "W": 0,
  },
  {
    "A": 1,
    "B": 0,
    "H": 270,
    "W": 0,
  },
  {
    "A": 1,
    "B": 0,
    "H": 120,
    "W": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"H":0,"W":0,"B":0} 1`] = `
[
  {
    "B": 0,
    "H": 0,
    "W": 0,
  },
  {
    "B": 0,
    "H": 15,
    "W": 0,
  },
  {
    "B": 0,
    "H": 330,
    "W": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"H":0,"W":0,"B":0} 2`] = `
[
  {
    "B": 0,
    "H": 0,
    "W": 0,
  },
  {
    "B": 0,
    "H": 120,
    "W": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"H":0,"W":0,"B":0} 3`] = `
[
  {
    "B": 0,
    "H": 0,
    "W": 0,
  },
  {
    "B": 0,
    "H": 90,
    "W": 0,
  },
  {
    "B": 0,
    "H": 180,
    "W": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"H":0,"W":0,"B":0} 4`] = `
[
  {
    "B": 0,
    "H": 0,
    "W": 0,
  },
  {
    "B": 0,
    "H": 60,
    "W": 0,
  },
  {
    "B": 0,
    "H": 240,
    "W": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"H":0,"W":0,"B":0} 5`] = `
[
  {
    "B": 0,
    "H": 0,
    "W": 0,
  },
  {
    "B": 0,
    "H": 30,
    "W": 0,
  },
  {
    "B": 0,
    "H": 240,
    "W": 0,
  },
  {
    "B": 0,
    "H": 120,
    "W": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"H":0,"W":0,"B":0} 6`] = `
[
  {
    "B": 0,
    "H": 0,
    "W": 0,
  },
  {
    "B": 0,
    "H": 45,
    "W": 0,
  },
  {
    "B": 0,
    "H": 270,
    "W": 0,
  },
  {
    "B": 0,
    "H": 120,
    "W": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"R":255,"G":0,"B":0,"A":1} 1`] = `
[
  {
    "A": 1,
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "A": 1,
    "B": 0,
    "G": 63.75,
    "R": 255,
  },
  {
    "A": 1,
    "B": 127.5,
    "G": 0,
    "R": 255,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"R":255,"G":0,"B":0,"A":1} 2`] = `
[
  {
    "A": 1,
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "A": 1,
    "B": 0,
    "G": 255,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"R":255,"G":0,"B":0,"A":1} 3`] = `
[
  {
    "A": 1,
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "A": 1,
    "B": 0,
    "G": 255,
    "R": 127.5,
  },
  {
    "A": 1,
    "B": 255,
    "G": 255,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"R":255,"G":0,"B":0,"A":1} 4`] = `
[
  {
    "A": 1,
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "A": 1,
    "B": 0,
    "G": 255,
    "R": 255,
  },
  {
    "A": 1,
    "B": 255,
    "G": 0,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"R":255,"G":0,"B":0,"A":1} 5`] = `
[
  {
    "A": 1,
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "A": 1,
    "B": 0,
    "G": 127.5,
    "R": 255,
  },
  {
    "A": 1,
    "B": 255,
    "G": 0,
    "R": 0,
  },
  {
    "A": 1,
    "B": 0,
    "G": 255,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"R":255,"G":0,"B":0,"A":1} 6`] = `
[
  {
    "A": 1,
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "A": 1,
    "B": 0,
    "G": 191.25,
    "R": 255,
  },
  {
    "A": 1,
    "B": 255,
    "G": 0,
    "R": 127.5,
  },
  {
    "A": 1,
    "B": 0,
    "G": 255,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"R":255,"G":0,"B":0} 1`] = `
[
  {
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "B": 0,
    "G": 63.75,
    "R": 255,
  },
  {
    "B": 127.5,
    "G": 0,
    "R": 255,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"R":255,"G":0,"B":0} 2`] = `
[
  {
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "B": 0,
    "G": 255,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"R":255,"G":0,"B":0} 3`] = `
[
  {
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "B": 0,
    "G": 255,
    "R": 127.5,
  },
  {
    "B": 255,
    "G": 255,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"R":255,"G":0,"B":0} 4`] = `
[
  {
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "B": 0,
    "G": 255,
    "R": 255,
  },
  {
    "B": 255,
    "G": 0,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"R":255,"G":0,"B":0} 5`] = `
[
  {
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "B": 0,
    "G": 127.5,
    "R": 255,
  },
  {
    "B": 255,
    "G": 0,
    "R": 0,
  },
  {
    "B": 0,
    "G": 255,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"R":255,"G":0,"B":0} 6`] = `
[
  {
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "B": 0,
    "G": 191.25,
    "R": 255,
  },
  {
    "B": 255,
    "G": 0,
    "R": 127.5,
  },
  {
    "B": 0,
    "G": 255,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests lch color as input 1`] = `
[
  "lch(30 131 301)",
  "lch(68 88 59)",
]
`;

exports[`ColorTranslator harmony tests lch color as input 2`] = `
[
  "lch(30 131 301 / 1)",
  "lch(68 88 59 / 1)",
]
`;

exports[`ColorTranslator harmony tests lch color as input 3`] = `
[
  {
    "C": 131,
    "H": 301,
    "L": 30,
  },
  {
    "C": 88,
    "H": 59,
    "L": 68,
  },
]
`;

exports[`ColorTranslator harmony tests lch color as input 4`] = `
[
  {
    "A": 1,
    "C": 131,
    "H": 301,
    "L": 30,
  },
  {
    "A": 1,
    "C": 88,
    "H": 59,
    "L": 68,
  },
]
`;
